<resources>
    <string name="app_name">TomeSphere</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="enter_your_registration_no">Enter your registration no.</string>
    <string name="enter_password">Enter password</string>
    <string name="registration_no">Registration No. : </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="select_one">Select One</string>
    <string name="welcome_to_dav_lib">Welcome To DAV Library</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="available_issued">Available/Issued</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="table_of_content">Table of Content</string>
    <string name="no_of_copies">No. of copies</string>
    <string name="enter_author_name">Enter Author Name :</string>
    <string name="enter_book_title">Enter Book Title :</string>
    <string name="insert_image_of_the_book">Insert Image of the Book</string>
    <string name="enter_short_description">Enter short Description :</string>
    <string name="enter_publisher">Enter Publisher :</string>
    <string name="no_of_copies_available">No. of Copies Available :</string>
    <string name="eg_1_2">Eg.,1,2,3....</string>
    <string name="release_date">Release Date</string>
    <string name="select_date">Select Date</string>
    <string name="available">Available</string>
    <string name="status">Status :</string>
    <string name="issued">Issued</string>
    <string name="enter_brief_description">Enter Brief Description</string>
    <string name="topic_name">Topic name</string>
    <string name="add">Add</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_about_the_category">Enter About The Category</string>
    <string name="enter_no_of_books_in_this_category">Enter No. of Books in this Category</string>
    <string name="add_images">Add Images</string>
    <string name="enter_description">Enter description</string>
    <string name="library">Library</string>
    <string name="no_of_books">No of books </string>
    <string name="book_category">Book Category</string>
    <string name="book_category_description">Book Category Description</string>
    <string name="are_you_sure_you_want_to_delete_this_section">Are You Sure You Want To Delete This Section?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="subject">Subject</string>
    <string name="about">About</string>
    <string name="see_over">See over \t</string>
    <string name="titles">\ttitles</string>
    <string name="enter_subject_category">Enter Subject/Category</string>
    <string name="just_added_history_business">Just added,History,Business,..</string>
    <string name="enter_the_table_content">Enter the table contents</string>
    <string name="enter_copies_available">Enter copies available</string>
    <string name="enter_date">Enter date</string>
    <string name="select_status">Select status</string>
    <string name="one_two">1,2,…1000…</string>
    <string name="book_title">Book Title</string>
    <string name="titles_in">TITLES IN</string>
    <string name="language">LANGUAGE : "</string>
    <string name="publisher">"PUBLISHER : "</string>
    <string name="release">"RELEASE : "</string>
    <string name="copies">"COPIES : "</string>
    <string name="enter_language_of_book">Enter Language of Book :</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="search_results">Search Results</string>
    <string name="you_want_to_wishlist_this_book">You want to wishlist this book?</string>
    <string name="tag">Tag</string>
    <string name="pick_images">Pick Images</string>
    <string name="update_image">Update Image</string>
    <string name="student_profile">Student Profile</string>
    <string name="for_search">For search…</string>
    <string name="student_name">Student Name</string>
    <string name="department">Department</string>
    <string name="mobile_no">Mobile No</string>
    <string name="insert_image_of_the_student">Insert image of the student</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_department">Enter Department</string>
    <string name="enter_mobile_no">Enter mobile no.</string>
    <string name="shelf_no">SHELF NO. :</string>
    <string name="book_no">BOOK NO. :</string>
    <string name="enter_shelf_no">Enter shelf no</string>
    <string name="enter_book_no">Enter book no</string>
    <string name="enter_registration_no">Enter Registration No...</string>
    <string name="semester">Semester : </string>
    <string name="enter_valid_mobile_no">Enter valid mobile no</string>
    <string name="enter_semester">Enter semester</string>
    <string name="issued_books">Issued \nBooks</string>
    <string name="previously_issued_books">Previously Issued</string>
    <string name="s_no">S. NO.</string>
    <string name="issued_date">Issued Date</string>
    <string name="_1">1</string>
    <string name="return_date">Return Date : </string>
    <string name="issue_date">Issue Date</string>
    <string name="enter_issue_date">Enter Issue date</string>
    <string name="enter_return_date">Enter Return Date</string>
    <string name="issued_book">Issued Book : </string>
    <string name="enrolled_in">Enrolled in:</string>
    <string name="graduation">Graduation</string>
    <string name="master">Masters</string>
    <string name="doctorate">Doctorate</string>
    <string name="expected_return_date">Expected Return Date:</string>
    <string name="actual_return_date">Actual Return Date</string>
    <string name="ok">OK</string>
    <string name="check_your_details">Check Your Details!</string>
    <string name="cards_available">Cards Available</string>
    <string name="fine_details">Fine Details</string>
    <string name="pageNo">Page No</string>
    <string name="enter_sr_no">Enter sr no</string>
    <string name="enter_page_no">Enter page no</string>
</resources>