<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/tvBooksAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:id="@+id/tvBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:id="@+id/ivBookPhoto"
            android:src="@drawable/empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/dp_8"
                android:background="@color/green" />

            <TextView
                android:id="@+id/tvBooksStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/dp_8"
                android:background="@color/green" />

            <CheckBox
                android:id="@+id/cbWishlist"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:background="@drawable/wishlist_tag"
                android:button="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/dp_8"
                android:background="@color/green" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvBooksDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_publisher"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvNoOfBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_of_books"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvBriefDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_brief_description"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvSrNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_no"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvTableOfContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_of_content"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvPageNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pageNo"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvBookNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_no"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvShelfNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shelf_no"
        android:textSize="@dimen/sp_20"
        android:visibility="gone" />

</LinearLayout>