<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10">
<TextView
    android:id="@+id/tvBooksAuthorName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/author_name"
    android:textSize="@dimen/sp_20" />
    <TextView
        android:id="@+id/tvBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvBooksStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
<TextView
    android:id="@+id/tvBooksDescription"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/description"
    android:minLines="4"
    android:textSize="@dimen/sp_20"/>
</LinearLayout>