<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:background="@color/white"
    android:padding="@dimen/dp_16">

    <!-- First Data Row -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSrNo"
            android:text="@string/_1"
            android:gravity="center"
            android:padding="@dimen/dp_8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBookTitle"
            android:text="@string/book_title"
            android:gravity="center"
            android:padding="@dimen/dp_8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIssuedDate"
            android:text="@string/issued_date"
            android:gravity="center"
            android:padding="8dp" />
    </TableRow>

</TableLayout>