<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    tools:context=".home.BooksAccordingToCategoryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/enter_subject_category"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etBooksCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_outline"
        android:hint="@string/just_added_history_business"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@color/green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/enter_about_the_category"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAboutBooksCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_outline"
        android:hint="@string/enter_about_the_category"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@color/green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_4"
        android:text="@string/enter_no_of_books_in_this_category"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNoOfBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_outline"
        android:hint="@string/one_two"
        android:inputType="number"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@color/green" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddBookAccToCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:backgroundTint="@color/deep_olive" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>