<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_5"
    android:layout_marginTop="@dimen/dp_5"
    android:layout_marginRight="@dimen/dp_5"
    android:padding="@dimen/dp_10"
    android:background="@drawable/profile_boundary"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivStudentPhoto"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/empty" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@color/green" />

        <TextView
            android:id="@+id/tvRegistrationNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_no"
            android:textSize="@dimen/sp_20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@color/green" />

        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textSize="@dimen/sp_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@color/green" />

        <TextView
            android:id="@+id/tvSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textSize="@dimen/sp_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@color/green" />

        <TextView
            android:id="@+id/tvMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textSize="@dimen/sp_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/dp_8"
            android:background="@color/green" />

    </LinearLayout>
</LinearLayout>